--- a/103.html
+++ b/103.html
@@ -12,7 +12,7 @@ function refreshIt() {
 
 <body onLoad=" setTimeout('refreshIt()',900)">
 
-<img src="https://ristmikud.tallinn.ee/last/cam103.jpg" name="myCam">
+<img src="https://ristmikud.tallinn.ee/last/cam103.jpg" name="cam">
 
 </body>
 
