--- a/103.html
+++ b/103.html
@@ -4,7 +4,7 @@
 <script language="JavaScript"><!--
 function refreshIt() {
    if (!document.images) return;
-   document.images['myCam'].src = 'https://ristmikud.tallinn.ee/last/cam103.jpg?' + Math.random();
+   document.images['cam'].src = 'https://ristmikud.tallinn.ee/last/cam103.jpg?' + Math.random();
    setTimeout('refreshIt()',900); // refresh every 5 secs
 }
 //--></script>
