--- a/103.html
+++ b/103.html
@@ -1,19 +1,14 @@
 <html>
-
 <head>
 <script language="JavaScript"><!--
 function refreshIt() {
    if (!document.images) return;
    document.images['cam'].src = 'https://ristmikud.tallinn.ee/last/cam103.jpg?' + Math.random();
-   setTimeout('refreshIt()',900); // refresh every 5 secs
+   setTimeout('refreshIt()',900);
 }
 //--></script>
 </head>
-
 <body onLoad=" setTimeout('refreshIt()',900)">
-
 <img src="https://ristmikud.tallinn.ee/last/cam103.jpg" name="cam">
-
 </body>
-
 </html>
